Release History
===============


1.2.3 (unreleased)
------------------

- Fix bug that caused a UnicodeDecodeError when using non-ASCII characters in
  fmt_metric (#12).


1.2.2 (2014-05-27)
------------------

- Mention that nagiosplugin also runs with Python 3.4 (no code changes
  necessary).
- Make name prefix in status output optional by allowing to assign None to
  Check.name.
- Accept bare metric as return value from Resource.probe().
- Fix bug where Context.describe() was not used to obtain metric description
  (#13162).


1.2.1 (2014-03-19)
------------------

- Fix build failures with LANG=C (#13140).
- Remove length limitation of perfdata labels (#13214).
- Fix formatting of large integers as Metric values (#13287).
- Range: allow simple numerals as argument to Range() (#12658).
- Cookie: allow for empty state file specification (#12788).


1.2 (2013-11-08)
----------------

- New `Summary.empty` method is called if there are no results present (#11593).
- Improve range violation wording (#11597).
- Ensure that nagiosplugin install correctly with current setuptools (#12660).
- Behave and do not attach anything to the root logger.
- Add debugging topic guide. Explain how to disable the timeout when using pdb
  (#11592).


1.1 (2013-06-19)
----------------

- Identical to 1.1b1.


1.1b1 (2013-05-28)
------------------

- Made compatible with Python 2.6 (#12297).
- Tutorial #3: check_users (#11539).
- Minor documentation improvements.


1.0.0 (2013-02-05)
------------------

- LogTail returns lines as byte strings in Python 3 to avoid codec issues
  (#11564).
- LogTail gives a line-based iterator instead of a file object (#11564).
- Basic API docs for the most important classes (#11612).
- Made compatible with Python 2.7 (#11533).
- Made compatible with Python 3.3.


1.0.0b1 (2012-10-29)
--------------------

- Improve error reporting for missing contexts.
- Exit with code 3 if no metrics have been generated.