@@ -7,6 +7,8 @@ Release History
 
 - Fix bug that caused a UnicodeDecodeError when using non-ASCII characters in
   fmt_metric (#12).
+- Print perfdata always on a single line (even in multi-line mode) to improve
+  compatibility with various monitoring systems (#11).
 
 
 1.2.2 (2014-05-27)
